--- a/中山程設作業python/L07.ipynb
+++ b/中山程設作業python/L07.ipynb
@@ -5,7 +5,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "class Movie:\n",
+    "    local_time=time.ctime()\n",
+    "    def __inint__(self):\n",
+    "        movie_list={\n",
+    "            \"Iron man\":\"\", \n",
+    "            \"Memory\":\"\" , \n",
+    "            \"Life For Sale\":\"\" }\n",
+    "    \n",
+    "    def choose_movie(self):\n",
+    "\n",
+    "    def find_play_time(self):\n",
+    "\n",
+    "    def __time__(self):\n",
+    "\n",
+    "            \n"
+   ]
   }
  ],
  "metadata": {
