Finish crawler class from 澎澎

--- a/Web_crawler/teachingBy彭彭.ipynb
+++ b/Web_crawler/teachingBy彭彭.ipynb
@@ -47,7 +47,7 @@
     "post_title=root.find(\"div\", class_=\"title\") #find會幫助尋找其中一個class=\"title\"的div標籤\n",
     "print(post_title)\n",
     "print(post_title.a.string, \"\\n\")\n",
-    "post_titles=root.find_all(\"div\", class_=\"title\") #find會幫助尋找其中一個class=\"title\"的div標籤，如果條件是id則id=\"title\"\n",
+    "post_titles=root.find_all(\"div\", class_=\"title\") #find會幫助尋找所有class=\"title\"的div標籤，如果條件是id則id=\"title\"\n",
     "for title in post_titles:\n",
     "    if title.a != None: #如果標題包含a標籤(沒有被刪除)\n",
     "        print(title.a.string)\n",
@@ -147,7 +147,7 @@
     "    # 解析原始碼，取得每篇文章的標題\n",
     "    import bs4\n",
     "    root=bs4.BeautifulSoup(data, \"html.parser\") #讓beautifulsoup4協助我們解析html\n",
-    "    post_titles=root.find_all(\"div\", class_=\"title\") #find會幫助尋找其中一個class=\"title\"的div標籤，如果條件是id則id=\"title\"\n",
+    "    post_titles=root.find_all(\"div\", class_=\"title\") #find會幫助尋找所有class=\"title\"的div標籤，如果條件是id則id=\"title\"\n",
     "    for title in post_titles:\n",
     "        if title.a != None: #如果標題包含a標籤(沒有被刪除)\n",
     "            print(title.a.string)\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,12 +174,16 @@
      "output_type": "stream",
      "text": [
       "為你推薦\n",
-      "連假倒數🥳最後營位⛺️快搶🔥\n",
-      "國旅跳島小旅行大集合🏝\n",
+      "聽說山上下雪了✨日賞桐花夜賞螢💕\n",
+      "五星飯店住宿快閃🔥 MOTEL新上架加碼贈全家咖啡🥤\n",
       "猜你喜歡\n",
-      "一年一度🌷荷蘭鬱金香花季🌷\n",
-      "限時優惠🔥瘋玩日本🇯🇵\n",
-      "春天遊韓國🇰🇷自由行必備精選🌸\n",
+      "花火節開跑🎇澎湖必玩特色體驗💦\n",
+      "📛獨家優惠📛巴黎迪士尼樂園🏰\n",
+      "日本美食🇯🇵米其林摘星🌟\n",
+      "出發濟州島🏝春日海岸風光💕\n",
+      "光露營就好了🏕帶著行李出發🚗\n",
+      "全民普發6000元💰加碼國旅優惠❗\n",
+      "全台樂園最酷玩伴大集合🧸\n",
       "全球樂園歡樂無限🎢\n",
       "安心出遊讓你更放鬆👉跟著評鑑優良夥伴出去玩🛩\n"
      ]
@@ -234,11 +238,238 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The TikTok Teens Go To Washington\n",
+      "What it takes to make 165 years of journalism available online\n",
+      "The Unquenchable Thirst to Be a Noun\n",
+      "Soul Food: Is Delicious Damn The Lies.\n",
+      "The Dog and the Dinosaur\n",
+      "Why poetry matters\n",
+      "Report from a Relationship\n",
+      "What We’re Reading: Dungeons & Dragons & AI\n",
+      "I’ll Be 50 This Year — It’s Sobering\n",
+      "AI and the American Smile\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Web crawler - request data(請求附帶的資料)\n",
+    "import urllib.request as req\n",
+    "import json\n",
+    "#建立連線網址\n",
+    "url=\"https://medium.com/_/graphql\"\n",
+    "#建立一個Request物件，附上request headers, request data的資訊\n",
+    "#requestData from Request Payload\n",
+    "requestData={\"operationName\":\"CuratedHomeFeedModuleQuery\",\"variables\":{\"paging\":{\"from\":\"10\",\"limit\":10}},\"query\":\"query CuratedHomeFeedModuleQuery($paging: PagingOptions!) {\\n  staffPicksFeed(input: {paging: $paging}) {\\n    items {\\n      ...CuratedHomeFeedItems_homeFeedItems\\n      __typename\\n    }\\n    pagingInfo {\\n      next {\\n        page\\n        limit\\n        from\\n        __typename\\n      }\\n      __typename\\n    }\\n    __typename\\n  }\\n}\\n\\nfragment CuratedHomeFeedItems_homeFeedItems on HomeFeedItem {\\n  __typename\\n  post {\\n    id\\n    title\\n    ...HomeFeedItem_post\\n    __typename\\n  }\\n}\\n\\nfragment HomeFeedItem_post on Post {\\n  __typename\\n  id\\n  title\\n  firstPublishedAt\\n  mediumUrl\\n  collection {\\n    id\\n    name\\n    domain\\n    logo {\\n      id\\n      __typename\\n    }\\n    __typename\\n  }\\n  creator {\\n    id\\n    name\\n    username\\n    imageId\\n    mediumMemberAt\\n    __typename\\n  }\\n  previewImage {\\n    id\\n    __typename\\n  }\\n  previewContent {\\n    subtitle\\n    __typename\\n  }\\n  readingTime\\n  tags {\\n    ...TopicPill_tag\\n    __typename\\n  }\\n  ...BookmarkButton_post\\n  ...OverflowMenuButtonWithNegativeSignal_post\\n  ...PostPresentationTracker_post\\n  ...PostPreviewAvatar_post\\n  ...Star_post\\n}\\n\\nfragment TopicPill_tag on Tag {\\n  __typename\\n  id\\n  displayTitle\\n  normalizedTagSlug\\n}\\n\\nfragment BookmarkButton_post on Post {\\n  visibility\\n  ...SusiClickable_post\\n  ...AddToCatalogBookmarkButton_post\\n  __typename\\n  id\\n}\\n\\nfragment SusiClickable_post on Post {\\n  id\\n  mediumUrl\\n  ...SusiContainer_post\\n  __typename\\n}\\n\\nfragment SusiContainer_post on Post {\\n  id\\n  __typename\\n}\\n\\nfragment AddToCatalogBookmarkButton_post on Post {\\n  ...AddToCatalogBase_post\\n  __typename\\n  id\\n}\\n\\nfragment AddToCatalogBase_post on Post {\\n  id\\n  __typename\\n}\\n\\nfragment OverflowMenuButtonWithNegativeSignal_post on Post {\\n  id\\n  visibility\\n  ...OverflowMenuWithNegativeSignal_post\\n  __typename\\n}\\n\\nfragment OverflowMenuWithNegativeSignal_post on Post {\\n  id\\n  creator {\\n    id\\n    __typename\\n  }\\n  collection {\\n    id\\n    __typename\\n  }\\n  ...OverflowMenuItemUndoClaps_post\\n  __typename\\n}\\n\\nfragment OverflowMenuItemUndoClaps_post on Post {\\n  id\\n  clapCount\\n  ...ClapMutation_post\\n  __typename\\n}\\n\\nfragment ClapMutation_post on Post {\\n  __typename\\n  id\\n  clapCount\\n  ...MultiVoteCount_post\\n}\\n\\nfragment MultiVoteCount_post on Post {\\n  id\\n  ...PostVotersNetwork_post\\n  __typename\\n}\\n\\nfragment PostVotersNetwork_post on Post {\\n  id\\n  voterCount\\n  recommenders {\\n    name\\n    __typename\\n  }\\n  __typename\\n}\\n\\nfragment PostPresentationTracker_post on Post {\\n  id\\n  visibility\\n  previewContent {\\n    isFullContent\\n    __typename\\n  }\\n  collection {\\n    id\\n    slug\\n    __typename\\n  }\\n  __typename\\n}\\n\\nfragment PostPreviewAvatar_post on Post {\\n  __typename\\n  id\\n  collection {\\n    id\\n    name\\n    ...CollectionAvatar_collection\\n    __typename\\n  }\\n  creator {\\n    id\\n    username\\n    name\\n    ...UserAvatar_user\\n    ...userUrl_user\\n    ...useIsVerifiedBookAuthor_user\\n    __typename\\n  }\\n}\\n\\nfragment CollectionAvatar_collection on Collection {\\n  name\\n  avatar {\\n    id\\n    __typename\\n  }\\n  ...collectionUrl_collection\\n  __typename\\n  id\\n}\\n\\nfragment collectionUrl_collection on Collection {\\n  id\\n  domain\\n  slug\\n  __typename\\n}\\n\\nfragment UserAvatar_user on User {\\n  __typename\\n  id\\n  imageId\\n  mediumMemberAt\\n  name\\n  username\\n  ...userUrl_user\\n}\\n\\nfragment userUrl_user on User {\\n  __typename\\n  id\\n  customDomainState {\\n    live {\\n      domain\\n      __typename\\n    }\\n    __typename\\n  }\\n  hasSubdomain\\n  username\\n}\\n\\nfragment useIsVerifiedBookAuthor_user on User {\\n  verifications {\\n    isBookAuthor\\n    __typename\\n  }\\n  __typename\\n  id\\n}\\n\\nfragment Star_post on Post {\\n  id\\n  creator {\\n    id\\n    __typename\\n  }\\n  __typename\\n}\\n\"}\n",
+    "request=req.Request(url, headers={ \n",
+    "    \"content-type\": \"application/json\",\n",
+    "    \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36\",\n",
+    "},data=json.dumps(requestData).encode(\"utf-8\")) #data=請求的額外資料, data=json.dumps(requestData).encode(\"utf-8\") #json.dump把資料變成字串，再用utf-8編碼\n",
+    "#發出請求\n",
+    "with req.urlopen(request) as response:\n",
+    "    result=response.read().decode(\"utf-8\") #根據觀察，取得的資料是JSON格式\n",
+    "#解析json格式的資料，取得每篇文章的標題\n",
+    "result=json.loads(result) #將字串格式轉換為字典格式\n",
+    "# print(result)\n",
+    "# print(result[\"data\"][\"staffPicksFeed\"][\"items\"][0][\"post\"][\"title\"]) #試著印出第一篇文章的標題\n",
+    "items=result[\"data\"][\"staffPicksFeed\"][\"items\"]\n",
+    "for item in items:  #印出10篇文章標題\n",
+    "    print(item[\"post\"][\"title\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Web crawler-request data"
+    "#python 檔案的存取、讀取\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【原创女主×Ren】1-拉瓦\n",
+      "[<div class=\"text\"></div>, <div class=\"text\">\n",
+      "<h2><a href=\"https://kkasum1.lofter.com/post/1ff5c40c_2b4e83490\">【原创女主×Ren】1</a></h2>\n",
+      "<p>//三流通灵师五流古刀法传人×财阀继承人</p>\n",
+      "<p>//谢刀×Ren</p>\n",
+      "<p>ps：完全乱来的意淫之作</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　1</p>\n",
+      "<p>　　“Phupha Komolpetch，”</p>\n",
+      "<p>　　与其说是高中生，不如说已经初具一个男人的模样了，坐在深红色皮椅里，身上的豹纹大衣比泰国的闷热天儿还要逼人，像一头锋芒毕露不知收敛为何物的狮子。</p>\n",
+      "<p>　　“高三（1）班，背景清白的好学生……”</p>\n",
+      "<p>　　他看着被摁在水里的男学生，却压根没把对方放在眼里，嘴里念着那学生的资料，每一个咬词都泄露了他的轻蔑。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　他走近Phupha，俯身的动作里也尽是掌控别人的漫不经心。</p>\n",
+      "<p>　　“也就是说你把这些视频备份了是吗？”他意味不明地顿了下，故作姿态：“那……就不可能消失了…”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　那四个人实在显眼，拿着电脑的男人穿着黑皮衣，他对着电话那头说了什么，接着视频便在Phupha面前的手机显示屏上凭空消失。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Phupha坚毅的表情维持不住，“Thyme！你怎么敢！”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Thyme乐于欣赏phupha绝望愤怒的神色，连惊讶都演的拙劣，“啊？怎么消失了？”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　——太坏了，仿佛天生没有同理心的坏种。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Thyme似笑非笑，这个占尽好风水的浑蛋少爷轻而易举地说：“Phupha，对我们来说，本身就没什么难事啊。”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　众人欢呼高歌，纸团垃圾承载着平时压抑着的躁动向中央投去，拳打脚踢伴着欢呼声，毫无节制地挥洒年轻的能量和恶意，不知道的还以为是什么邪教现场。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Phupha惊惧之下，怀着破釜沉舟的愤怒地蹭起身给了Thyme一拳，四周一静。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“啊…”Thyme摸了摸脸，笑得又疯又狠，把phupha按住。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　接着是更张狂的喧嚣声，M.J悠哉游哉跟Kavin打着赌。</p>\n",
+      "<p>　　赌需要几分钟Phupha就会被Thyme干翻。</p>\n",
+      "<p>　　好不嚣张。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Phupha年轻的脊骨被人踹翻在地，他拼尽全力的反击与不平愤懑都只是一个笑话，这个年轻的灵魂在悲鸣。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　混乱中却有一人仿佛终于厌烦这扰人清净的狂热，Ren对眼前的暴行视而不见，那是一种漠然的傲慢，站起身回首望一眼台上各色看客。</p>\n",
+      "<p>　　有人狂喜趁乱行恶，有人麻木不仁，有人面露怜悯。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　在最高处一个纤细的身影先他一步转身离去，留下浮光掠影的一道身影，她背后形状怪异的盒子随她动作发出哐啷的一声响，却没有惊动任何人。</p>\n",
+      "<p>　　如同她来时亦无声无息。</p>\n",
+      "<p>　　让人怀疑那里是否真的有人来过。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Ren顿了下脚步，微微拧眉。</p>\n",
+      "<p>　　终究是什么也没望进眼里，他将一切狂热的泛着恶臭的氛围都扔在身后，踏上台阶离开。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　_</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“哇啊啊啊啊——！！！”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“这个学校到底是怎么了！！！？？？”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　声音中气十足，震得鸟惊四飞。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　谢刀垂死病中惊坐起，人还没太清醒，非常暴躁地手拄着草地循着声音去找。</p>\n",
+      "<p>　　谁！！！</p>\n",
+      "<p>　　他。娘。的。</p>\n",
+      "<p>　　是谁！！</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　她半睁着眼往上看。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“balabala外壳，balabala问题balabala……”</p>\n",
+      "<p>　　那姑娘穿着绿色校服，正站在天台边上一通狂轰滥炸。</p>\n",
+      "<p>　　“…这就是优秀的学生吗！！笨蛋笨蛋balabala F4 balabala……”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　醒了。这下完全醒了。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“真是疯——了——！！”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　谢刀：“……”</p>\n",
+      "<p>　　这穿透力，内息深厚，适合练武啊。</p>\n",
+      "<p>　　谢刀的泰语学得不太行，一点点听不懂。有点迷茫，更多的是无可宣泄的暴躁。</p>\n",
+      "<p>　　“艹。”</p>\n",
+      "<p>　　人被吵醒就会暴躁，暴躁就会干坏事，谢刀垮起张批脸，打开盒子提起里面的刀往草地中间走。</p>\n",
+      "<p>　　她抬起头往上看。</p>\n",
+      "<p>　　“那谁。”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Gorya：“啊啊啊啊啊啊啊啊啊啊啊啊！！”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“……”</p>\n",
+      "<p>　　很好。她完全没听见的。</p>\n",
+      "<p>　　谢刀放弃喊麦，扎了个马步，抡起大刀往旁边可怜的树干上砍。</p>\n",
+      "<p>　　“哐——”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“哐哐——”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Gorya：“……！？”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　谢刀运气，挥刀如砍柴，“哐哐哐——！！”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Gorya倒仰：“！！！”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　那可怜的装饰性绿植一般的枝丫哪经得起她这粗糙的对待，叶子哗啦哗啦直往下掉，很快就摇摇欲坠了，凋残几片绿叶。</p>\n",
+      "<p>　　画面一度非常之凶狠。</p>\n",
+      "<p>　　谢刀长长吐出一口浊气，站直了遥遥跟目瞪口呆的少女对上了视线。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　四周一寂。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“啊！！”Gorya先注意到的是那把巨大的黑漆漆的刀，然后是身量娇小的少女一错不错地瞪着自己，吓了她一跳，下意识问：“你是谁？？”</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　我是你爹。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　谢刀把这话在嘴里无声地嚼了两遍，差不多冷静了，她拍掉身上的树叶，没再管天台上的少女，任其在上面扒着栏杆好奇地盯着她看。</p>\n",
+      "<p>　　“你砍了学校的树？不会被罚吗？有监控的！”</p>\n",
+      "<p>　　谢刀默了一下。</p>\n",
+      "<p>　　忘记现代都市哪哪都有监控了。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　Gorya觉得这个少女看起来不太友好，那种不友好会让她吓一跳但又不至于敬而远之，她莫名地感到好奇和兴奋，“啊！我刚刚是不是吵到你了？”</p>\n",
+      "<p>　　一通大喊过后理智回笼，Gorya后知后觉感到丢人，讷讷地，“对不起啊，我以为没人了。”</p>\n",
+      "<p>　　算了。</p>\n",
+      "<p>　　谢刀微有动容，但她拒绝回答。</p>\n",
+      "<p>　　等她把刀放回盒子再抬头，天台上的少女已经不见了，取而代之的是一个着浅色衬衫的少年，头发有点乱，个儿高的惊人，双手随意撑在栏杆上，朝她投来没什么情绪的一瞥。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　对视两秒。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　两人或许都对对方这突兀的出现感到好奇，非常巧合的是，两个人都是对方成长经历里不会见到的那一类，同时他们都有非常人的素质，非常坦然地互相打量。</p>\n",
+      "<p>　　看着那少年通身的气度，衬衫褶儿都写着很贵。</p>\n",
+      "<p>　　谢刀想起了前两天看过的资料，回想起那闪瞎眼的身价忍不住眯了眯眼，“Renrawin Aira？”</p>\n",
+      "<p>　　轻声吐出这个名字。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　“嗯？”</p>\n",
+      "<p>　　少年是听不见她在说什么的，但他突然弯腰朝她勾了下脑袋，似乎要听听她在说什么一样，头发有点乱糟糟的，站在风中吹的更乱了些。</p>\n",
+      "<p>　　看起来很像毛茸茸的犬科生物，让人非常想给他捋一捋。</p>\n",
+      "<p>　　</p>\n",
+      "<p>　　谢刀：“…啧。”</p>\n",
+      "<p>　　她别开脸，将一言不发贯彻到底，背起刀盒往外走。</p>\n",
+      "<p>　　</p>\n",
+      "</div>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Web crawler 基本\n",
+    "#抓取ppt電影版的html原始碼\n",
+    "# https://www.youtube.com/watch?v=9Z9xKWfNo7k&list=RDCMUCguZS-y7codLSt6vpkVdnKg&index=1\n",
+    "import urllib.request as req\n",
+    "\n",
+    "url=\"https://kkasum1.lofter.com/post/1ff5c40c_2b4e83490\"\n",
+    "#建立request物件，再利用物件打開網址，傅家request headers的資訊\n",
+    "request=req.Request(url, headers={ \n",
+    "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36\"\n",
+    "})\n",
+    "with req.urlopen(request) as response:\n",
+    "    data=response.read().decode(\"utf-8\")\n",
+    "\n",
+    "\n",
+    "# 解析原始碼，取得每篇文章的標題\n",
+    "import bs4\n",
+    "root=bs4.BeautifulSoup(data, \"html.parser\") #讓beautifulsoup4協助我們解析html格式\n",
+    "# print(root.title)\n",
+    "print(root.title.string)\n",
+    "texts=root.find_all(\"div\", class_=\"text\") #find會幫助尋找其中一個class=\"title\"的div標籤\n",
+    "print(texts)\n",
+    "\n",
+    "# print(p)\n",
+    "# for text in texts:\n",
+    "#     print(texts)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "# print(post_title.a.string, \"\\n\")\n",
+    "# post_titles=root.find_all(\"div\", class_=\"title\") #find會幫助尋找其中一個class=\"title\"的div標籤，如果條件是id則id=\"title\"\n",
+    "# for title in post_titles:\n",
+    "#     if title.a != None: #如果標題包含a標籤(沒有被刪除)\n",
+    "#         print(title.a.string)\n",
+    "\n"
    ]
   }
  ],
