Update crawler, learn vue3

--- a/Web_crawler/teachingBy彭彭.ipynb
+++ b/Web_crawler/teachingBy彭彭.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,14 +12,23 @@
       "<title>看板 movie 文章列表 - 批踢踢實業坊</title>\n",
       "看板 movie 文章列表 - 批踢踢實業坊\n",
       "<div class=\"title\">\n",
-      "<a href=\"/bbs/movie/M.1679487415.A.D95.html\">[ 好雷] 龍與地下城-出乎意料的奇幻佳作</a>\n",
+      "<a href=\"/bbs/movie/M.1682087226.A.1C2.html\">[新聞] 亞瑞阿斯特恐怖三連拍 不想被定型</a>\n",
       "</div>\n",
-      "[ 好雷] 龍與地下城-出乎意料的奇幻佳作 \n",
+      "[新聞] 亞瑞阿斯特恐怖三連拍 不想被定型 \n",
       "\n",
-      "[ 好雷] 龍與地下城-出乎意料的奇幻佳作\n",
-      "[討論] 下一任詹姆士龐德 最新賠率\n",
-      "[好雷] 捍衛任務4 \n",
-      "[新聞] 陳昇現身【守護黑面琵鷺】番外篇\"要報仇\"\n",
+      "[新聞] 亞瑞阿斯特恐怖三連拍 不想被定型\n",
+      "[請益] 龍與地下城 or 阿凡達2 4DX\n",
+      "[情報] 《沙贊2》賣輸《魔比斯》\n",
+      "[新聞] 漫威用替身就好 歐森:親自演特技浪費時間\n",
+      "[普好雷] 鈴芽之旅是否該二刷\n",
+      "[問片] 我只記得一個場景 求救大神\n",
+      "[好雷] Ghosted (真愛搞失蹤) Apple TV的電影\n",
+      "[新聞] 黑人之亂？小美人魚、埃及豔后通通變黑人\n",
+      "[好雷] 逐夢大海 True Spirit （Netflix）\n",
+      "Re: [討論] 是漫威殞落/星際3沒人氣/還是缺宣傳?\n",
+      "[新聞] 車庫娛樂告贏觸電網！控「著作權排除\n",
+      "[情報] 岩井俊二新片是音樂電影！廣瀨鈴、黑木華回歸演出\n",
+      "[好雷] 超級瑪利歐兄弟電影版 \n",
       "[公告] 電影板板規 2022/12/5\n"
      ]
     }
@@ -56,71 +65,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[問卦] 有沒有臉很重要的卦\n",
-      "[問卦] 〓.〓 六扇門哪個門才能顯示懂吃？！\n",
-      "[問卦] 遊覽車規定要五年內？\n",
-      "[問卦] 發錢/我朋友想加入戰組啦，這面試會過嗎\n",
-      "[問卦] 有人能夠告訴我嗎?\n",
-      "[問卦] 賣我的反二對賬單有搞頭嗎\n",
-      "[問卦] 記民國年是不是很沒意義?\n",
-      "[問卦] 慟! 老高今天沒發片\n",
-      "[新聞] 亞太電成投資詐騙溫床？NCC：未落實用戶\n",
-      "[問卦] 31歲轉職iOS工程師還來得及嗎\n",
-      "[新聞] 洗確診遺體遭撤換 台南禮儀師揭新規隱憂\n",
-      "[問卦] 南韓啦啦隊短褲是不是都上拉很緊\n",
-      "[問卦] 大谷最後一球\n",
-      "[問卦] 遇到瘋狗鄰居是不是要比他還瘋？？？？\n",
+      "[問卦] 外國人說台灣治安好 484 30分看50分?\n",
+      "Re: [問卦] 中國山東淄博，這座城市真的佩服！\n",
+      "[問卦] 還好光陽機車廣告不是在火鍋店約會\n",
+      "[問卦] 有沒有台灣投手身材的八卦\n",
+      "[問卦] 以後還會出現什麼奇葩的殺人法？\n",
+      "[新聞] 「廖老大」挑戰滿州拉力賽喊刺激 狂讚屏\n",
+      "[新聞] 《就業服務法》修法三讀通過 移工失\n",
+      "Re: [問卦] 黑道流氓為啥能有投票權?他們會投的都...\n",
       "[公告] 八卦板板規(2023.03.01)\n",
-      "[協尋] 3/3 16：50-17：20大寮區新厝路和新三\n",
-      "[協尋] 台2濱海事故\n",
-      "[協尋] 3/15 7:44高雄大寮行車記錄器(更新地點)\n",
-      "[公告] 代PO 政黑進板圖徵選 5/23截止(每推100P\n",
-      "[問卦] 台北哪一家涼麵最頂？（在線等）\n",
-      "[問卦] 手搖飲料店是不是也開始要搞輪班制？\n",
-      "[問卦] 賣雞蛋糕的攤販變多了？也年輕化？\n",
-      "[問卦] 睢陽之戰的張巡為何不降？\n",
-      "[新聞] 獅子大開口!宏都拉斯索近25億美元　想建\n",
-      "Re: [問卦] 才三月不會有人真的開冷氣吧\n",
-      "Re: [問卦] 是不是要買群創才有妹子約的八卦?\n",
-      "[問卦] 悍創概括承受 但律師會看留言\n",
-      "[問卦] 竹南哪裡有賣便宜短褲\n",
-      "[問卦] 台灣差不多文化是如何產生的?\n",
-      "[新聞] 倒楣男連續確診三次被當逃兵移送 向檢察\n",
-      "[問卦] 大家看av的時候會聯結認識的人嘛\n",
-      "[問卦] 八卦反烏仔、中立仔要不要跪著道歉\n",
-      "[問卦] 如果ROC二戰時不小心站錯隊跑到軸心國？\n",
-      "[問卦] 渡久地能帶領日本贏WBC嗎？\n",
-      "Re: [問卦] 台北哪一家涼麵最頂？（在線等）\n",
-      "Re: [新聞] 在日本違停進警局 YouTuber無奈吐「9字」全網罵爆\n",
-      "[問卦] 有線耳機是不是一定會有一邊聽不到的時候\n",
-      "Re: [新聞] 國軍槍彈外流？桃園民宅藏制式軍火 國防\n",
-      "[問卦] 堂妹居然說涼宮春日是老人在看的?\n",
-      "Re: [問卦] 女森150 60公斤 能接受嗎 o'_'o\n",
-      "[問卦] 筆電用了11年了\n",
-      "[問卦] 重考大學讀哪個科系好？\n",
-      "[問卦] 巴哈卡通瘋的NO GAME NO LIFE好看嗎?\n",
-      "[問卦] 有沒有韓國人超愛來台灣旅遊的八卦？\n",
-      "[問卦] 黑粉兩天兩億產值.政府與相關產業不汗顏?\n",
-      "[問卦] 有沒有刁民酸菜魚的八卦？\n",
-      "[問卦] 所以在德國不能穿納粹符號的衣服嗎？\n",
-      "[問卦] 剛開挖的預售屋要怎麼看的八卦?\n",
-      "Re: [問卦] 買了Joeman的課程，買得起第二間房嗎？\n",
-      "[問卦] 嫁出去結果變月光族 怎麼辦?\n",
-      "Re: [新聞] 警破改槍工廠卻驚見軍中65K2步槍、子彈　國防部長又要怒\n",
-      "[問卦] one battle one的時候選PG ONE會怎樣\n",
-      "[問卦] 郵局i郵箱主機是樹莓派？\n",
-      "[問卦] 起步看錯邊是什麼意思=.=\n",
-      "Re: [問卦] 台灣棒球如何跟日本一樣強？\n",
-      "Re: [問卦] 大谷都怎麼解決性慾= =\n",
-      "[問卦] 才三月不會有人真的開冷氣吧\n",
-      "[新聞] 愛莉莎莎遭傳熱戀羽球男神 IG貼文親揭真\n"
+      "[協尋] 4/12 08:00台中-五權西路三段 行車紀錄器\n",
+      "Fw: [寶寶] 妙兒園負責人原址新開「詠欣」托嬰中心\n",
+      "[爆卦] 柬埔寨政府控告半島電視台\n",
+      "[爆卦] 內湖托育中心虐嬰（發錢）\n",
+      "[問卦] 台積電總裁該換人了吧\n",
+      "[問卦] 其實熱湯才真的是終極武器吧??\n",
+      "[問卦] 房屋成本只能佔收入的三成？\n",
+      "[問卦] 請問機車的任意第三人責任險\n",
+      "[問卦] 女生是不是不能穿puma這牌子的東西\n",
+      "[問卦] 臺中還適合人住嗎？\n",
+      "[問卦] chatGPT工讀生會不會過勞死啊\n",
+      "[問卦] 死後不是消失吧？\n",
+      "Re: [新聞] 台灣學生神回覆「我們不一樣」中國學生氣\n",
+      "[問卦] 越宣導越多人被騙的八卦\n",
+      "[問卦] 金城武是不是過氣了？ㄏ\n",
+      "[問卦] 公家機關一堆小主管養情婦是真的嗎????\n",
+      "[問卦] 妳各位Netflix都訂多久了？\n",
+      "[問卦] 假設赤壁被韓國人翻拍會怎樣？\n",
+      "Re: [問卦] 為啥網路上越多路權團體，交通越差？\n",
+      "[問卦] 社會敗壞 學校老師該怎麼教學生？\n",
+      "[問卦] 早餐店蛋價什麼時候調降回來呀？\n",
+      "[問卦] 我們一直走向民主為何言論自由被限縮？\n",
+      "[問卦] 會不會湯根本就還沒滾\n",
+      "[新聞] 快訊／鬆口了！被國民黨徵召會說Yes, I \n",
+      "[問卦] 貓貓氣噗噗怎辦？？？？\n",
+      "[問卦] 是不是很多店家不喜歡收大鈔？\n",
+      "[問卦] 回帳跟自願繳薪水一樣嗎？\n",
+      "Re: [問卦] 為啥酒店小姐,有小孩還要做八大?\n",
+      "[問卦] 以前總統府的防備有這麼森嚴？\n",
+      "Re: [新聞] 「班班吃鳳梨」成20校營養午餐?陳吉仲喊\n",
+      "Re: [問卦] 台灣越來越像墨西哥是我的錯覺嗎\n",
+      "[新聞] 邰智源衝台積電花園「完全沒人！」員工噴\n",
+      "[問卦] 為啥現在只剩下北極玄天上帝？\n",
+      "[問卦] 吸菸室的台灣大媽視訊吵死日本人？\n",
+      "Re: [問卦] 我們的教育哪一步走錯 才導致8+9滿街跑\n",
+      "Re: [新聞] 秦剛：兩岸同屬一中 也是台灣的現狀\n",
+      "[問卦] 火鍋業者該自肅停業一天了吧\n",
+      "[問卦] 台灣愈來愈像日本是我的錯覺嗎\n",
+      "[問卦] 社會大學有教綜合格鬥嗎？\n",
+      "[問卦] 大家比較支持憲兵擴編還是保二擴編???\n",
+      "Re: [新聞] 「班班吃鳳梨」成20校營養午餐?陳吉仲喊\n",
+      "[問卦] 劍聖的劍二十三跟無名天劍誰強\n",
+      "Re: [問卦] 我們的教育哪一步走錯 才導致8+9滿街跑\n",
+      "[新聞] 21歲正妹公然露下體「廣場上自慰」！　影\n"
      ]
     }
    ],
@@ -131,7 +135,6 @@
     "# https://www.youtube.com/watch?v=BEA7F9ExiPY&list=RDCMUCguZS-y7codLSt6vpkVdnKg&index=2\n",
     "import urllib.request as req\n",
     "\n",
-    "url=\"https://www.ptt.cc/bbs/Gossiping/index.html\"\n",
     "def getData(url):\n",
     "    #建立request物件，再利用物件打開網址，傅家request headers的資訊\n",
     "    request=req.Request(url, headers={ \n",
@@ -492,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
