--- a/Web_crawler/teachingBy彭彭.ipynb
+++ b/Web_crawler/teachingBy彭彭.ipynb
@@ -5303,6 +5303,8 @@
    "source": [
     "import requests\n",
     "import bs4\n",
+    "from docx import Document\n",
+    "document=Document()\n",
     "count=0\n",
     "url=\"https://kkasum1.lofter.com/post/1ff5c40c_2b4e83490\"\n",
     "while count<34:\n",
@@ -5311,9 +5313,51 @@
     "    texts=root.find(\"div\", class_=\"content\") #find會幫助尋找其中一個class=\"title\"的div標籤\n",
     "    texts=texts.select_one(\"div\").text\n",
     "    print(texts)\n",
+    "    document.add_paragraph(texts)\n",
     "    url=root.find(\"a\", id=\"__prev_permalink__\")\n",
     "    url=url[\"href\"]\n",
     "    count+=1\n",
+    "nName=\"RenX謝刀\"+\".docx\"\n",
+    "file_path=\"C:/Users/hsian/Desktop/小說儲藏/\"+nName\n",
+    "document.save(file_path)\n",
+    "# print(url)\n",
+    "# print(p)\n",
+    "# for text in texts:\n",
+    "#     print(texts)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "# print(post_title.a.string, \"\\n\")\n",
+    "# post_titles=root.find_all(\"div\", class_=\"title\") #find會幫助尋找其中一個class=\"title\"的div標籤，如果條件是id則id=\"title\"\n",
+    "# for title in post_titles:\n",
+    "#     if title.a != None: #如果標題包含a標籤(沒有被刪除)\n",
+    "#         print(title.a.string)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import bs4\n",
+    "# from docx import Document\n",
+    "# document=Document()\n",
+    "count=0\n",
+    "url=\"https://statementdog.com/taiex/19-semiconductor-industry\"\n",
+    "data= requests.get(url)\n",
+    "root=bs4.BeautifulSoup(data.text, \"html.parser\") #讓beautifulsoup4協助我們解析html格式\n",
+    "list_body=root.find(\"div\", class_=\"industry-ranking-list-body\") #find會幫助尋找其中一個class=\"title\"的div標籤\n",
+    "list_item=list_body.find_all(\"div\", ul=\"industry-ranking-item\") #find會幫助尋找其中一個class=\"title\"的div標籤\n",
+    "texts=texts.select_one(\"div\").text\n",
+    "print(texts)\n",
+    "# document.add_paragraph(texts)\n",
+    "url=root.find(\"a\", class_=\"industry-upstream\")\n",
+    "url=url[\"href\"]\n",
+    "# document.save(file_path)\n",
     "# print(url)\n",
     "# print(p)\n",
     "# for text in texts:\n",
